--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^18.0.6",
     "chalk": "^4.1.2",
     "colors": "^1.4.0",
     "discord.js": "^14.7.1",
@@ -27,8 +26,7 @@
     "glob": "^8.1.0",
     "js-beautify": "^1.14.7",
     "moment": "^2.29.4",
-    "mongoose": "^6.9.1",
-    "node-fetch": "^3.2.6"
+    "mongoose": "^6.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
