--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-node": "^11.1.0",
     "inquirer": "^8.2.5",
     "nodemon": "^2.0.20",
     "prettier": "2.8.4",
