--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chalk": "^4.1.2",
     "colors": "^1.4.0",
     "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3",
     "glob": "^8.1.0",
     "js-beautify": "^1.14.7",
     "moment": "^2.29.4",
