--- a/package.json
+++ b/package.json
@@ -3,14 +3,10 @@
   "version": "1.0.0",
   "description": "Organizational structure for using the discord.js framework",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js"
-  },
-  "bin": {
-    "beautify": "./src/Utils/CLI/beautify.js",
-    "eslintrc": "./src/Utils/CLI/eslintrc.js",
-    "prettierrc": "./src/Utils/CLI/prettierrc.js"
   },
   "keywords": [],
   "author": [
