--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,9 +2,7 @@
   "parser": "@babel/eslint-parser",
   "env": {
     "browser": true,
-    "commonjs": true,
-    "es2021": true,
-    "node": true
+    "es2021": true
   },
   "extends": [ 
     "eslint:recommended", 
@@ -17,12 +15,16 @@
       "classes": true
     }
   },
-  "plugins": ["n", "node"],
+  "plugins": ["node"],
   "rules": {
     "node/no-unsupported-features/es-syntax": "off",
     "node/no-missing-import": "error",
     "node/no-extraneous-import": "error",
     "node/no-unpublished-require": "error",
+    "no-undef": "error",
+    "no-unused-vars": "error",
+    "indent": ["error", "tab"],
+    "linebreak-style": ["error", "unix"],
     "class-methods-use-this": "off",
     "no-undef": "off",
     "n/shebang": "error",
@@ -31,18 +33,14 @@
     "linebreak-style": ["error", "windows"],
     "quotes": ["error", "single"],
     "semi": ["error", "always"],
-    "require-await": ["error"],
-    "no-lone-blocks": ["error"],
+    "require-await": "error",
+    "no-lone-blocks": "error",
     "block-spacing": ["error", "always"],
     "eol-last": ["error", "always"],
     "brace-style": ["error", "stroustrup"],
-    "prefer-const": [
-      "error",
-      {
-        "destructuring": "any",
-        "ignoreReadBeforeAssign": false
-      }
-    ],
+    "prefer-const": "error",
+    "no-empty-function": "error",
+    "prefer-arrow-callback": "error",
     "object-curly-spacing": [
       "error",
       "always",
@@ -50,12 +48,6 @@
         "arraysInObjects": true
       }
     ],
-    "comma-spacing": [
-      "error",
-      {
-        "before": false,
-        "after": true
-      }
-    ]
+    "comma-spacing": ["error", { "before": true, "after": false }],
   }
 }
