--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Organizational structure for using the discord.js framework",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js"
@@ -21,7 +22,7 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "colors": "^1.4.0",
-    "discord.js": "^14.7.1",
+    "darkcord": "1.2.1",
     "dotenv": "^16.0.3",
     "glob": "^8.1.0",
     "js-beautify": "^1.14.7",
