--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "license": "Apache-2.0",
   "scripts": {
     "test": "jest"
   },
