--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^18.0.6",
     "axios": "^1.5.0",
     "better-sqlite3": "^8.3.0",
+    "chalk": "^5.3.0",
     "colors": "^1.4.0",
     "discord.js": "^14.13.0",
     "dotenv": "^16.0.3",
