--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "colors": "^1.4.0",
     "discord.js": "^14.13.0",
     "dotenv": "^16.0.3",
+    "firebase": "8.6.4",
     "moment": "^2.29.4",
     "mysql2": "^3.6.0",
     "mysql2-promise": "^0.1.4",
